<resources>
    <string name="app_name">Top-Github App</string>
    <string name="action_settings">Settings</string>
    <string name="internet_connection_error_message">Please check your internet connection</string>
    <string name="no_developers_found">No developres found</string>
    <string name="username">UserName:</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="desc">Desciption:</string>
    <string name="repo_name">Repo Name:</string>
    <string name="repo_url">Repo URL:</string>
</resources>
