<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="developer"
            type="com.appstreet.topgithubapp.model.TrendingDeveloperModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg"
        android:clickable="true"
        android:focusable="true"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/detail_avatar_width"
                android:layout_height="@dimen/detail_avatar_width"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <TextView
                    style="@style/TextStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/tvUsername"
                    style="@style/TextStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5"
                    android:text="@{developer.username}"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <TextView
                    style="@style/TextStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/TextStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5"
                    android:text="@{developer.name}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <TextView
                    style="@style/TextStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/url" />

                <TextView
                    android:id="@+id/tvUrl"
                    style="@style/TextStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:padding="@dimen/dp_5"
                    android:text="@{developer.url}" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:padding="@dimen/dp_5">

                <TextView
                    style="@style/TextStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/repo_name" />

                <TextView
                    android:id="@+id/tvRepoName"
                    style="@style/TextStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5"
                    android:text="@{developer.repo.name}"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <TextView
                    style="@style/TextStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/desc" />

                <TextView
                    android:id="@+id/tvRepoDescription"
                    style="@style/TextStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp_5"
                    android:text="@{developer.repo.description}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <TextView
                    style="@style/TextStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="@string/repo_url" />

                <TextView
                    android:id="@+id/tvRepoURL"
                    style="@style/TextStyleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:padding="@dimen/dp_5"
                    android:text="@{developer.repo.url}" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>